objects/ssot__AssetServiceLevelObjective__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssetId__c</fullName>
        <label>Asset</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetMeasure__c</fullName>
        <label>Asset Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetServiceLevelObjectiveStatus__c</fullName>
        <label>Asset Service Level Objective Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConformanceComparatorText__c</fullName>
        <label>Conformance Comparator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConformancePeriodNumber__c</fullName>
        <label>Conformance Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ConformancePeriodUOMId__c</fullName>
        <label>Conformance Period Unit Of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConformanceTargetNumber__c</fullName>
        <label>Conformance Target</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ConformanceTargetUOMId__c</fullName>
        <label>Conformance Target Unit Of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GracePeriodNumber__c</fullName>
        <label>Grace Period</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__GracePeriodUOMId__c</fullName>
        <label>Grace Period Unit Of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Asset Service Level Objective Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ThresholdTargetNumber__c</fullName>
        <label>Threshold Target</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ThresholdTargetUOMId__c</fullName>
        <label>Threshold Target Unit Of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ValidityEndDate__c</fullName>
        <label>Validity End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ValidityStartDate__c</fullName>
        <label>Validity Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720283026966_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssetServiceLevelObjective_Threshold_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>AssetServiceLevelObjective_Threshold_rel</relationshipLabel>
        <relationshipName>rel_1720283026966_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720283028460_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssetServiceLevelObjective_Conforman_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>AssetServiceLevelObjective_Conforman_rel</relationshipLabel>
        <relationshipName>rel_1720283028460_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720283029277_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssetServiceLevelObjective_Conforman_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>AssetServiceLevelObjective_Conforman_rel</relationshipLabel>
        <relationshipName>rel_1720283029277_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>